--- a/templates/index.html
+++ b/templates/index.html
@@ -40,6 +40,7 @@
 
   <p>This is a clean and easy way to imbed an image on a webpage (much easier than using <code>img</code>!)</p>
 
+  <p>This is a new change!</p>
 </div>
 {% endblock %}
 
