comment on html

--- a/templates/index.html
+++ b/templates/index.html
@@ -40,7 +40,7 @@
 
   <p>This is a clean and easy way to imbed an image on a webpage (much easier than using <code>img</code>!)</p>
 
-  <p>This is a new change!</p>
+  <p>This is a new change! And another new change after it.</p>
 </div>
 {% endblock %}
 
