--- a/templates/_currentprojects.html
+++ b/templates/_currentprojects.html
@@ -4,7 +4,7 @@
   <h3><u>Firebase-Flask Driven Blog: "FireFlog"</u></h3>
 </div>
 <div class="col-sm-12 proj_container">
-  <div class="col-sm-2 proj_img"></div>
+  <div class="col-sm-2 proj_img1"></div>
   <div class="col-sm-10 proj_text">A basic blog application that uses a Flask-driven backend and Cloud Firestore database. It features a login form, user database, and 'timeline' of what all users have recently posted.</div>
 <div class="col-sm-12" style="padding-bottom:10px">
   <div class="col-sm-2"></div>
