--- a/templates/style.css
+++ b/templates/style.css
@@ -93,6 +93,15 @@ html, body {
   /*background-color: blue;*/
 }
 
+.proj_img1 {
+  background-image: url("/static/Media/firebase_logo.png");
+  background-size: contain;
+  background-repeat: no-repeat;
+  background-position: center;
+
+  /*background-color: blue;*/
+}
+
 
 
 /* On small screens, set height to 'auto' for sidenav and grid */
